--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         run: flutter pub get
         
       - name: Build
-        run: flutter build web --base-href "/lunch/"
+        run: flutter build web --base-href "/lunch_trash/"
         
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
